<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/userProfileTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/user_profile"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/userPhoto"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginVertical="20dp"
        android:background="@drawable/shape_circle"
        android:backgroundTint="@android:color/darker_gray"
        app:layout_constraintDimensionRatio="1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/userProfileTitle"
        app:layout_constraintWidth_percent="0.5" />


    <TextView
        android:id="@+id/userIDTitle"
        style="@style/UserProfileGridItem"
        android:text="@string/user_id_field"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/userPhoto" />

    <TextView
        android:id="@+id/userID"
        style="@style/UserProfileGridItem"
        app:layout_constraintStart_toEndOf="@id/userIDTitle"
        app:layout_constraintTop_toTopOf="@id/userIDTitle"
        tools:text="$UserUUID" />

    <TextView
        android:id="@+id/userNameTitle"
        style="@style/UserProfileGridItem"
        android:text="@string/user_name_field"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/userIDTitle" />

    <TextView
        android:id="@+id/userName"
        style="@style/UserProfileGridItem"
        app:layout_constraintStart_toEndOf="@id/userNameTitle"
        app:layout_constraintTop_toTopOf="@id/userNameTitle"
        tools:text="$UserName" />

    <TextView
        android:id="@+id/userEmailTitle"
        style="@style/UserProfileGridItem"
        android:text="@string/user_email_field"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/userNameTitle" />

    <TextView
        android:id="@+id/userEmail"
        style="@style/UserProfileGridItem"
        app:layout_constraintStart_toEndOf="@id/userEmailTitle"
        app:layout_constraintTop_toTopOf="@id/userEmailTitle"
        tools:text="$UserEmail" />

    <TextView
        android:id="@+id/userPhoneTitle"
        style="@style/UserProfileGridItem"
        android:text="@string/user_phone_field"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/userEmailTitle" />

    <TextView
        android:id="@+id/userPhone"
        style="@style/UserProfileGridItem"
        app:layout_constraintStart_toEndOf="@id/userPhoneTitle"
        app:layout_constraintTop_toTopOf="@id/userPhoneTitle"
        tools:text="$UserPhone" />


</androidx.constraintlayout.widget.ConstraintLayout>