<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <TextView
        android:id="@+id/loadMoreButton"
        android:layout_alignParentTop="true"
        android:padding="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/load_items"
        android:textStyle="bold"
        android:textSize="25sp"
        android:foreground="?attr/selectableItemBackground"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center"
        android:background="@android:color/darker_gray"
        />

    <androidx.recyclerview.widget.RecyclerView
        android:layout_below="@id/loadMoreButton"
        android:id="@+id/list"
        android:name="com.example.kotlinapplist.ItemFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        app:layoutManager="LinearLayoutManager"
        tools:context=".ui.list.ItemListFragment"
        tools:itemCount="20"
        tools:listitem="@layout/user_list_item" />

    <TextView
        android:visibility="gone"
        android:id="@+id/infoText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:text="@string/items_are_empty"
        android:textSize="30sp"
        android:textStyle="bold" />

    <Button
        android:visibility="gone"
        android:id="@+id/reloadButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reload_items"
        android:layout_below="@id/infoText"
        android:layout_centerInParent="true"
        />
</RelativeLayout>